# DisCoFuzz

./: .gitignore  CCG_Parsing.ipynb  Compositional_Model_MVP.ipynb  DisCoCirc_Parsing.ipynb  DisCoFuzz.ipynb  DisCoFuzz_Space_Tests.ipynb  DisCoFuzz_WF.ipynb  DisCoFuzz_WiC_Eval.ipynb  DisCoFuzz_WiC_WordNet_Eval.ipynb  README.md  References.bib  Visualizations.ipynb  WiC_EDA.ipynb  full_eval=False,wn_enriched=False,n_components=2,kernel_size=8.tsv  full_eval=False,wn_enriched=False,n_components=5,kernel_size=8.tsv  full_eval=False,wn_enriched=False,n_components=64,kernel_size=16.tsv  full_eval=True,wn_enriched=False,n_components=64,kernel_size=16.tsv  full_train_eval-wn_enriched=False-n_components=2-kernel_size=16.tsv  full_train_eval-wn_enriched=True-n_components=64-kernel_size=16.tsv  full_train_eval-wn_free-n_components=64-kernel_size=16.tsv  full_train_eval_kernel=16_n_components=128.tsv  full_train_eval_kernel=16_n_components=128_npsd-ot-avg.tsv  full_train_eval_kernel=16_n_components=128_npsd-ot-noavg.tsv  full_train_sims_kernel=16_n_components=128_npsd-ot-noavg.tsv  pyproject.toml
eval/: full_train_eval-wn_enriched-n_components=16-kernel_size=16.tsv  full_train_eval-wn_enriched-n_components=64-kernel_size=16.tsv  full_train_eval-wn_enriched=False-n_components=64-kernel_size=16.tsv  full_train_eval-wn_enriched=False-n_components=64-kernel_size=32.tsv  full_train_eval-wn_enriched=True-n_components=64-kernel_size=16.tsv  full_train_eval-wn_free-n_components=64-kernel_size=16.tsv
eval/combined/: full_eval-wn_enriched=False-n_components=64-kernel_size=16.tsv  full_eval=True,wn_enriched=False,n_components=64,kernel_size=16,cos&w1&q.tsv
eval/combined_ablated_dim=2/: full_eval-wn_enriched=False-n_components=2-kernel_size=16.tsv
eval/train/: full_train_eval-wn_enriched=False-n_components=64-kernel_size=16.tsv  (+1 more)
src/discofuzz/: config.py  (+13 more)
tests/: test_tensor_shapes.py
(+11 files in other folders)
